--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,14 +1,35 @@
 ---
-- include_vars: vars.yml
+- include_vars: vault.yml
+
+- name: Add "en_GB.UTF-8 UTF-8" to /etc/locale.gen
+  lineinfile: dest=/etc/locale.gen
+              regexp="^#en_GB.UTF-8 UTF-8"
+              line="en_GB.UTF-8 UTF-8"
+              state=present
+
+- name:  generate locales
+  shell: locale-gen
+
+- name: set locales
+  lineinfile: dest=/etc/locale.conf
+              create=yes
+              state=present
+              line="LANG=en_GB.UTF-8"
 
 - name:   Upgrade everything pacman -Syu
   pacman: update_cache=yes upgrade=yes
 
-- name:   Install openssh
-  pacman: pkg=openssh state=present
-
 - name:   Install sudo
   pacman: name=sudo state=present
+
+- name:   Install zsh
+  pacman: name=zsh state=present
+
+- name:   Install mosh.
+  pacman: pkg=mosh state=present
+
+- name:   Install tmux.
+  pacman: pkg=tmux state=present
 
 - name:   Install git
   pacman: name=git state=present
@@ -16,18 +37,25 @@
 - name:  Add group sudo
   group: name=sudo state=present
 
-  # did not work
 - name: Set root password
-  user: name=root password="{{root_password}}"
+  user: name=root
+        password="{{ crypted_root_password }}"
+        shell=/usr/bin/zsh
 
 - name: Create user urbanslug and add them to group, sudo
   user: name=urbanslug
-        password="{{ urbanslug_password }}"
+        password="{{ crypted_urbanslug_password }}"
         shell=/usr/bin/zsh
         group=sudo
         generate_ssh_key=yes
         ssh_key_bits=4096
         ssh_key_file=.ssh/id_rsa
+
+- name: Give sudo group sudo privileges.
+  lineinfile: dest=/etc/sudoers
+              regexp="^# %sudo"
+              line="%sudo ALL=(ALL) ALL"
+              state=present
 
 - name:     Render sshd_config template and copy it to host
   template: src=../templates/sshd/sshd_config
@@ -36,9 +64,6 @@
             owner=root
             group=root
             backup=yes
-
-- name: Give sudo group sudo privileges.
-  lineinfile: dest=/etc/sudoers state=absent regexp="^# %sudo" line="%sudo   ALL=(ALL) ALL"
 
 - name:    move root authorized keys to urbanslug authorized keys.
   command: mv /root/.ssh/authorized_keys /home/urbanslug/.ssh/authorized_keys
