SSL via certbot and letsencrypt
Signed-off-by: Njagi Mwaniki <njagi@urbanslug.com>

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -22,6 +22,12 @@
 - name:   Install sudo
   pacman: name=sudo state=present
 
+- name: install make
+  pacman: pkg=make state=present
+
+- name: install gcc
+  pacman: pkg=gcc state=present
+xx
 - name:   Install zsh
   pacman: name=zsh state=present
 
