--- a/roles/webservers/tasks/main.yml
+++ b/roles/webservers/tasks/main.yml
@@ -1,11 +1,20 @@
 - name: install nginx
-  pacman: name=nginx state=present
+  pacman: name=nginx
+          state=present
 
 - name: install certbot
-  pacman: name=certbot state=present
+  pacman: name=certbot
+          state=present
+
+- name: copy ssl_common.conf
+  copy: src=../files/ssl_common.conf
+        dest=/etc/nginx/ssl_common.conf
+        owner=root
+        group=root
+        mode=0644
 
 - name: copy nginx.conf file to the host.
-  copy: src=../files/nginx/nginx.conf
+  copy: src=../files/nginx.conf
         dest=/etc/nginx/nginx.conf
         owner=root
         group=root
@@ -14,3 +23,22 @@
 
 - name: Start nginx at boot.
   service: name=nginx enabled=yes
+
+
+- name: LetsEncrypt autpo renewal script
+  copy: src=../files/certbot.service
+        dest=/etc/systemd/system/certbot.service
+        owner=root
+        group=root
+        mode=0644
+
+- name: Certbot timer
+  copy: src=../files/certbot.timer
+        dest=/etc/systemd/system/certbot.timer
+        owner=root
+        group=root
+        mode=0644
+
+- name: Start certbot timer
+  service: name=certbot.timer
+           enabled=yes
