Create symlink for tmux.conf
Signed-off-by: Njagi Mwaniki <njagi@urbanslug.com>

--- a/roles/personal/tasks/main.yml
+++ b/roles/personal/tasks/main.yml
@@ -52,6 +52,11 @@
         path={{ urbanslug_home_dir }}/.zshrc
         state=link
 
+- name: symlink ~/.tmux.conf
+  file: src={{ dotfiles_dir }}/.tmux.conf
+        path={{ urbanslug_home_dir }}/.tmux.conf
+        state=link
+
 - name: symlink root/.zshrc
   become: true
   become_user: root
