Make it open source-able
Signed-off-by: Njagi Mwaniki <njagi@urbanslug.com>

--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,8 +1,9 @@
 # We need to use host aliases to avoid what is described here: https://github.com/ansible/ansible/issues/4319
-digital-ocean ansible_host=46.101.96.118
-base ansible_host=46.101.96.118
-personal ansible_host=46.101.96.118
-webservers ansible_host=46.101.96.118
+digital-ocean ansible_host=46.101.189.166
+base ansible_host=46.101.189.166
+irc ansible_host=46.101.189.166
+personal ansible_host=46.101.189.166
+webservers ansible_host=46.101.189.166
 
 [arch]
 base
@@ -16,5 +17,4 @@ webservers
 
 [arch-sluggie:vars]
 ansible_python_interpreter=/usr/bin/python2
-ansible_port=30002
 ansible_user=urbanslug
