--- a/roles/webservers/files/nginx/nginx.conf
+++ b/roles/webservers/files/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user urbanslug sudo;
+user deploy www;
 worker_processes  1;
 
 events {
@@ -28,9 +28,6 @@ http {
     server {
         listen 443 ssl http2;
         server_name www.blog.urbanslug.com;
-        ssl_certificate /etc/letsencrypt/live/www.blog.urbanslug.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/www.blog.urbanslug.com/privkey.pem;
-        include /etc/nginx/ssl_common.conf;
         return 301 https://blog.urbanslug.com$request_uri;
     }
 
@@ -50,7 +47,7 @@ http {
         ssl_certificate_key  /etc/letsencrypt/live/blog.urbanslug.com/privkey.pem;
 
         include /etc/nginx/ssl_common.conf;
-        root /home/urbanslug/src/haskell/blog/_site;
+        root /home/deploy/blog;
 
         location / {
            index index.html;
